[gd_scene load_steps=2 format=3 uid="uid://dblssuru8cljv"]

[ext_resource type="Script" path="res://draggable_object.gd" id="1_0do5p"]

[node name="DraggableObject" type="Area2D"]
collision_layer = 256
collision_mask = 64
script = ExtResource("1_0do5p")

[node name="DoubleClickTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="double_clicked" from="." to="." method="_on_double_clicked"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
